switch to PostgreSQL, move dev-only settings out of settings.py

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ src/edurepo/teachers/migrations/
 src/webapp/css/bootstrap*.css
 src/webapp/lib/angular
 src/webapp/lib/jquery
+src/edurepo/dev_settings.cfg
+src/edurepo/settings.cfg
