--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,12 @@
 Django==1.6.2
 South==0.8.4
 django-tastypie==0.11.0
+oauthlib==0.6.1
 psycopg2==2.5.2
 python-dateutil==2.2
 python-mimeparse==0.1.4
+python-openid==2.2.5
+python-social-auth==0.1.21
+requests==2.2.1
+requests-oauthlib==0.4.0
 six==1.5.2
