--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,6 +2,7 @@ Django==1.6.2
 South==0.8.4
 beautifulsoup4==4.3.2
 coverage==3.7.1
+django-bootstrap3==3.3.0
 django-tastypie==0.11.0
 oauthlib==0.6.1
 psycopg2==2.5.2
