ignore another PyCharm file

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ src/edurepo/.idea/dictionaries/
 src/webapp/.idea/
 src/edurepo/.idea/dataSources.ids
 src/edurepo/.idea/dataSources.xml
+src/edurepo/.idea/vcs.xml
