--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,16 +1,17 @@
-Django==1.6.2
+Django==1.6.6
 South==0.8.4
 beautifulsoup4==4.3.2
+certifi==14.05.14
 coverage==3.7.1
 django-bootstrap3==3.3.0
-django-tastypie==0.11.0
-oauthlib==0.6.1
-psycopg2==2.5.2
+django-tastypie==0.11.1
+oauthlib==0.6.3
+psycopg2==2.5.4
 python-dateutil==2.2
 python-mimeparse==0.1.4
 python-openid==2.2.5
-python-social-auth==0.1.21
-pytz==2013.9
-requests==2.2.1
-requests-oauthlib==0.4.0
+python-social-auth==0.1.26
+pytz==2014.4
+requests==2.4.0
+requests-oauthlib==0.4.1
 six==1.5.2
