--- a/src/ansible/deploy.yml
+++ b/src/ansible/deploy.yml
@@ -2,6 +2,7 @@
 
 - name: Configure and deploy the application code
   hosts: webservers
+  remote_user: "{{ remote_user }}"
   tasks:
     - name: Install packages
       apt: name={{ item }} state=latest
