--- a/src/ansible/deploy.yml
+++ b/src/ansible/deploy.yml
@@ -65,29 +65,14 @@
            version=HEAD
            update=yes
            force=no
-    - copy: src={{ local_overlay_dir }}/ dest={{ remote_checkout }}
+    - template: src={{ local_overlay_dir }}/src/edurepo/settings.cfg dest={{ remote_checkout }}/src/edurepo
+    - template: src=config.json.j2 dest={{ remote_checkout }}/src/webapp/resources/config.json
     - file: >
            dest={{ scratch_dir }}
            mode=755
            owner={{ remote_user }}
            group={{ remote_user }}
            state=directory
-    - unarchive: src={{ local_dist_dir }}/angular-1.2.13.zip dest={{ scratch_dir }} creates={{ scratch_dir }}/angular-1.2.13
-    - unarchive: src={{ local_dist_dir }}/bootstrap-2.3.2.zip dest={{ scratch_dir }} creates={{ scratch_dir }}/bootstrap
-    - file: >
-           dest={{ remote_checkout }}/src/webapp/lib
-           mode=755
-           owner={{ remote_user }}
-           group={{ remote_user }}
-           state=directory
-    - name: Drop Ansible files in the right place
-      command: cp -pR {{ scratch_dir }}/angular-1.2.13 {{ remote_checkout }}/src/webapp/lib creates={{ remote_checkout }}/src/webapp/lib/angular-1.2.13
-    - file: >
-           src={{ remote_checkout }}/src/webapp/lib/angular-1.2.13
-           dest={{ remote_checkout }}/src/webapp/lib/angular
-           state=link
-    - name: Drop Bootstrap files in the right place
-      command: cp -pR {{ scratch_dir }}/bootstrap/css/ {{ remote_checkout }}/src/webapp/ creates={{ remote_checkout }}/src/webapp/css/bootstrap.css
     - file: >
            dest={{ remote_checkout }}/envs
            mode=755
@@ -137,7 +122,7 @@
       sudo: yes
       when: use_system_httpd == "yes"
     - name: Configure system httpd
-      copy: src={{ local_conf_dir }}/ dest=/etc/apache2/sites-enabled/
+      template: src={{ local_conf_dir }}/edurepo-vhost.conf dest=/etc/apache2/sites-enabled/
       sudo: yes
       when: use_system_httpd == "yes"
     - name: Restart system httpd
