specify base API URL for pretend_teacher cron job via the .json file

--- a/src/ansible/deploy.yml
+++ b/src/ansible/deploy.yml
@@ -112,7 +112,7 @@
     - name: Define server_purge cron job
       cron: name="server_purge" hour="1" minute="11" job="{{ remote_checkout }}/src/edurepo/resources/server_purge.sh"
     - name: Define maintain_pretend_teacher cron job
-      cron: name="maintain_pretend_teacher" hour="0" minute="30" job="{{ remote_checkout }}/src/edurepo/teachers/pretend_teacher.sh {{ canonical_base_url }}ed/"
+      cron: name="maintain_pretend_teacher" hour="0" minute="30" job="{{ remote_checkout }}/src/edurepo/teachers/pretend_teacher.sh --from-json={{ remote_checkout }}/src/webapp/resources/config.json"
     - name: Define nightly_archive cron job
       cron: name="nightly_archive" hour="1" minute="20" job="{{ remote_checkout }}/src/edurepo/backup.sh /home/{{ remote_user }}/backups"
       when: nightly_archive != "no"
