--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,7 +3,9 @@ certifi==14.5.14
 coverage==3.7.1
 Django==1.7.3
 django-bootstrap3==5.0.3
+django-nose==1.3
 django-tastypie==0.12.1
+nose==1.3.4
 oauthlib==0.7.2
 psycopg2==2.5.4
 PyJWT==0.4.1
