--- a/src/ansible/deploy.yml
+++ b/src/ansible/deploy.yml
@@ -59,12 +59,12 @@
       file: >
           dest=/home/{{ remote_user }}/backups
           state=directory
-    - git: repo=git://github.com/trawick/edurepo.git
+    - git: repo=git://github.com/trawick/{{ project_name }}.git
            dest={{ remote_checkout }}
            version=HEAD
            update=yes
            force=no
-    - template: src={{ local_overlay_dir }}/src/edurepo/settings.cfg dest={{ remote_checkout }}/src/edurepo
+    - template: src={{ local_overlay_dir }}/src/{{ project_name }}/settings.cfg dest={{ django_src }}
     - template: src=config.json.j2 dest={{ remote_checkout }}/src/webapp/resources/config.json
     - file: >
            dest={{ scratch_dir }}
@@ -79,27 +79,27 @@
            group={{ remote_user }}
            state=directory
     - name: Create new virtualenv
-      command: "{{ virtualenv_binary }} -p {{ python_binary }} --no-site-packages {{ remote_checkout }}/envs/edurepo creates={{ remote_checkout }}/envs/edurepo"
+      command: "{{ virtualenv_binary }} -p {{ python_binary }} --no-site-packages {{ virtualenv_dir }} creates={{ virtualenv_dir }}"
     - file: >
            dest={{ static_dir }}
            mode=755
            owner={{ remote_user }}
            group={{ remote_user }}
            state=directory
-    - pip: virtualenv={{ remote_checkout }}/envs/edurepo
+    - pip: virtualenv={{ virtualenv_dir }}
            requirements={{ remote_checkout }}/src/requirements.txt
     - django_manage: >
-          app_path={{ remote_checkout }}/src/edurepo
+          app_path={{ django_src }}
           command=migrate
-          virtualenv={{ remote_checkout }}/envs/edurepo
+          virtualenv={{ virtualenv_dir }}
     - django_manage: >
-          app_path={{ remote_checkout }}/src/edurepo
+          app_path={{ django_src }}
           command=collectstatic
-          virtualenv={{ remote_checkout }}/envs/edurepo
+          virtualenv={{ virtualenv_dir }}
     - name: Load repository data from XML
-      command: "{{ remote_checkout }}/envs/edurepo/bin/python repo/import_xml.py ../../samples/ import"
+      command: "{{ virtualenv_dir }}/bin/python repo/import_xml.py ../../samples/ import"
       args:
-        chdir: "{{ remote_checkout }}/src/edurepo"
+        chdir: "{{ django_src }}"
     - name: Skip import of resource data in the future
 # Use this copy command to touch the file so that the timestamp isn't changed each time.
 # That allows us to see the last time the resource data was imported.
@@ -107,16 +107,16 @@
       notify:
       - load-resource-data
     - name: Define server_validation cron job
-      cron: name="server_validation" hour="*/2" minute="11" job="{{ remote_checkout }}/src/edurepo/resources/server_validation.sh"
+      cron: name="server_validation" hour="*/2" minute="11" job="{{ django_src }}/resources/server_validation.sh"
     - name: Define server_purge cron job
-      cron: name="server_purge" hour="1" minute="11" job="{{ remote_checkout }}/src/edurepo/resources/server_purge.sh"
+      cron: name="server_purge" hour="1" minute="11" job="{{ django_src }}/resources/server_purge.sh"
     - name: Define maintain_pretend_teacher cron job
-      cron: name="maintain_pretend_teacher" hour="0" minute="30" job="{{ remote_checkout }}/src/edurepo/teachers/pretend_teacher.sh --from-json={{ remote_checkout }}/src/webapp/resources/config.json"
+      cron: name="maintain_pretend_teacher" hour="0" minute="30" job="{{ django_src }}/teachers/pretend_teacher.sh --from-json={{ remote_checkout }}/src/webapp/resources/config.json"
     - name: Define nightly_archive cron job
-      cron: name="nightly_archive" hour="1" minute="20" job="{{ remote_checkout }}/src/edurepo/backup.sh /home/{{ remote_user }}/backups"
+      cron: name="nightly_archive" hour="1" minute="20" job="{{ django_src }}/backup.sh /home/{{ remote_user }}/backups"
       when: nightly_archive != "no"
     - name: Set up pretend teacher immediately, so that the demo works without waiting for the cron job.
-      command: "{{ remote_checkout }}/src/edurepo/teachers/pretend_teacher.sh {{canonical_base_url }}ed/"
+      command: "{{ django_src }}/teachers/pretend_teacher.sh {{canonical_base_url }}ed/"
     - name: Configure system httpd to include mod_proxy
       apache2_module: state=present name=proxy
       sudo: yes
@@ -126,26 +126,26 @@
       sudo: yes
       when: use_system_httpd == "yes"
     - name: Configure system httpd
-      template: src={{ local_conf_dir }}/edurepo-vhost.conf dest=/etc/apache2/sites-enabled/
+      template: src={{ local_conf_dir }}/{{ project_name }}-vhost.conf dest=/etc/apache2/sites-enabled/
       sudo: yes
       when: use_system_httpd == "yes"
     - name: Restart system httpd
       command: /etc/init.d/apache2 reload
       sudo: yes
       when: use_system_httpd == "yes"
-    - name: Add edurepo-app uWSGI config
-      template: src=edurepo.ini dest={{ log_dir }}/edurepo.ini
+    - name: Add application uWSGI config
+      template: src=uwsgi-ini.j2 dest={{ log_dir }}/{{ project_name }}.ini
       when: use_system_httpd == "yes"
-    - name: Add edurepo-app init script
-      template: src=edurepo-app dest=/etc/init.d/edurepo-app mode=0751
+    - name: Add application init script
+      template: src=init-script.j2 dest=/etc/init.d/{{ project_name }}-app mode=0751
       sudo: yes
       when: use_system_httpd == "yes"
-    - name: Configure run-levels for edurepo-app
-      command: update-rc.d edurepo-app defaults
+    - name: Configure run-levels for application
+      command: update-rc.d {{ project_name }}-app defaults
       sudo: yes
       when: use_system_httpd == "yes"
-    - name: Restart edurepo-app
-      action: service name=edurepo-app state=started
+    - name: Restart application
+      action: service name={{ project_name }}-app state=started
       sudo: yes
       when: use_system_httpd == "yes"
     - name: Restart custom httpd
@@ -156,6 +156,6 @@
     - name: load-resource-data
       django_manage: >
           command=loaddata
-          app_path={{ remote_checkout }}/src/edurepo
-          virtualenv={{ remote_checkout }}/envs/edurepo
-          fixtures={{ remote_checkout }}/src/edurepo/resources/fixtures/sample.json
+          app_path={{ django_src }}
+          virtualenv={{ virtualenv_dir }}
+          fixtures={{ django_src }}/resources/fixtures/sample.json
