--- a/src/ansible/deploy.yml
+++ b/src/ansible/deploy.yml
@@ -32,11 +32,11 @@
     - name: Setup up Postgresql user
       sudo: yes
       sudo_user: postgres
-      postgresql_user: name={{ edurepo_pg_user }} password={{ edurepo_pg_password }} role_attr_flags=CREATEDB,NOSUPERUSER
+      postgresql_user: name={{ pg_user }} password={{ pg_password }} role_attr_flags=CREATEDB,NOSUPERUSER
     - name: Setup up Postgresql DB
       sudo: yes
       sudo_user: postgres
-      postgresql_db: name={{ edurepo_db }}
+      postgresql_db: name={{ project_db }}
                      encoding='UTF-8'
     - name: Add the logging group
       group: name={{ log_group }} state=present
@@ -120,11 +120,11 @@
     - name: Configure system httpd to include mod_proxy
       apache2_module: state=present name=proxy
       sudo: yes
-      when: use_system_httpd == "yes"
+      when: use_system_httpd == "yes" and use_mod_wsgi == "no"
     - name: Configure system httpd to include mod_proxy_scgi
       apache2_module: state=present name=proxy_scgi
       sudo: yes
-      when: use_system_httpd == "yes"
+      when: use_system_httpd == "yes" and use_mod_wsgi == "no"
     - name: Configure system httpd
       template: src={{ base_cfg_dir }}/ubuntu-apache24/{{ project_name }}-vhost.conf dest=/etc/apache2/sites-enabled/
       sudo: yes
@@ -135,23 +135,27 @@
       when: use_system_httpd == "yes"
     - name: Add application uWSGI config
       template: src=uwsgi-ini.j2 dest={{ log_dir }}/{{ project_name }}.ini
-      when: use_system_httpd == "yes"
+      when: use_mod_wsgi == "no"
     - name: Add application init script
       template: src=init-script.j2 dest=/etc/init.d/{{ project_name }}-app mode=0751
       sudo: yes
-      when: use_system_httpd == "yes"
+      when: use_mod_wsgi == "no"
     - name: Configure run-levels for application
       command: update-rc.d {{ project_name }}-app defaults
       sudo: yes
-      when: use_system_httpd == "yes"
+      when: use_mod_wsgi == "no"
     - name: Restart application
       action: service name={{ project_name }}-app state=started
       sudo: yes
-      when: use_system_httpd == "yes"
-    - name: Configure custom httpd
-      template: src={{ base_cfg_dir }}/custom-apache24/{{ project_name }}-vhost.conf dest=/usr/local/conf/conf.d/
+      when: use_mod_wsgi == "no"
+    - name: Configure custom httpd using mod_wsgi
+      template: src={{ base_cfg_dir }}/custom-apache24-wsgi/{{ project_name }}-vhost.conf dest=/usr/local/conf/conf.d/
       sudo: yes
-      when: use_system_httpd == "no"
+      when: use_system_httpd == "no" and use_mod_wsgi == "yes"
+    - name: Configure custom httpd using mod_proxy_scgi
+      template: src={{ base_cfg_dir }}/custom-apache24-proxy-scgi/{{ project_name }}-vhost.conf dest=/usr/local/conf/conf.d/
+      sudo: yes
+      when: use_system_httpd == "no" and use_mod_wsgi == "no"
     - name: Restart custom httpd
       command: '{{ apachectl }} graceful'
       sudo: yes
