Use newer pip, represent requirement dependencies

--- a/src/ansible/deploy.yml
+++ b/src/ansible/deploy.yml
@@ -105,6 +105,10 @@
            state=directory
 
     - pip: virtualenv={{ virtualenv_dir }}
+           name=pip
+           version=7.1.2
+
+    - pip: virtualenv={{ virtualenv_dir }}
            requirements={{ remote_checkout }}/src/requirements.txt
 
     - django_manage: >
