--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,17 +4,21 @@ coverage==3.7.1
 Django==1.7.3
 django-bootstrap3==5.0.3
 django-nose==1.3
+  nose==1.3.4
 django-tastypie==0.12.1
-nose==1.3.4
-oauthlib==0.7.2
+  python-dateutil==2.4.0
+    six==1.9.0
+  python-mimeparse==0.1.4
 psycopg2==2.5.4
-PyJWT==0.4.1
-python-dateutil==2.4.0
-python-mimeparse==0.1.4
-python-openid==2.2.5
 python-social-auth==0.2.1
+  # requests
+  oauthlib==0.7.2
+  # six
+  PyJWT==0.4.1
+  python-openid==2.2.5
+  requests-oauthlib==0.4.2
+    # requests
+    # oauthlib
 pytz==2014.10
 requests==2.5.1
-requests-oauthlib==0.4.2
-six==1.9.0
 uWSGI==2.0.10
