--- a/src/ansible/deploy.yml
+++ b/src/ansible/deploy.yml
@@ -187,33 +187,32 @@
     - name: Set up pretend teacher immediately, so that the demo works without waiting for the cron job.
       command: "{{ django_src }}/teachers/pretend_teacher.sh {{canonical_base_url }}ed/"
 
-    - name: Configure system httpd to include mod_proxy
-      apache2_module: state=present name=proxy
+    - name: Configure system httpd to include necessary modules
+      apache2_module: state=present name={{ item }}
       sudo: yes
-      when: use_system_httpd == "yes" and use_mod_wsgi == "no"
-
-    - name: Configure system httpd to include mod_proxy_scgi
-      apache2_module: state=present name=proxy_scgi
-      sudo: yes
-      when: use_system_httpd == "yes" and use_mod_wsgi == "no"
-
-    - name: Configure system httpd to include mod_headers
-      apache2_module: state=present name=headers
-      sudo: yes
-      when: use_system_httpd == "yes"
-
-    - name: Configure system httpd to include mod_deflate
-      apache2_module: state=present name=deflate
-      sudo: yes
-      when: use_system_httpd == "yes"
-
-    - name: Configure system httpd to include mod_expires
-      apache2_module: state=present name=expires
-      sudo: yes
+      with_items:
+        - cgid
+        - deflate
+        - expires
+        - headers
+        - proxy
+        - proxy_scgi
+        - rewrite
+        - ssl
       when: use_system_httpd == "yes"
 
     - name: Configure system httpd
-      template: src={{ base_cfg_dir }}/ubuntu-apache24/{{ project_name }}-vhost.conf dest=/etc/apache2/sites-enabled/
+      template: src=edurepo-vhost.conf.j2 dest=/etc/apache2/sites-enabled/edurepo-vhost.conf
+      sudo: yes
+      when: use_system_httpd == "yes"
+
+    - name: Configure system httpd SSL and other global settings
+      template: src=staging-ssl-common.conf.j2 dest=/etc/apache2/conf-enabled/staging-ssl-common.conf
+      sudo: yes
+      when: use_system_httpd == "yes" and server_type == "staging"
+
+    - name: Disable system httpd default site
+      command: a2dissite 000-default
       sudo: yes
       when: use_system_httpd == "yes"
 
@@ -233,36 +232,27 @@
 
     - name: Add application uWSGI config
       template: src=uwsgi-ini.j2 dest={{ uwsgi_cfg_dir }}/{{ project_name }}.ini
-      when: use_mod_wsgi == "no"
       sudo: yes
       notify: restart application
 
     - name: Add application init script
       template: src=init-script.j2 dest=/etc/init.d/{{ project_name }}-app mode=0751
       sudo: yes
-      when: use_mod_wsgi == "no"
       notify: restart application
 
     - name: Configure run-levels for application
       command: update-rc.d {{ project_name }}-app defaults
       sudo: yes
-      when: use_mod_wsgi == "no"
       notify: restart application
 
     - name: Run application
       action: service name={{ project_name }}-app state=started
       sudo: yes
-      when: use_mod_wsgi == "no"
-
-    - name: Configure custom httpd using mod_wsgi
-      template: src={{ base_cfg_dir }}/custom-apache24-wsgi/{{ project_name }}-vhost.conf dest=/usr/local/conf/conf.d/
-      sudo: yes
-      when: use_system_httpd == "no" and use_mod_wsgi == "yes"
 
     - name: Configure custom httpd using mod_proxy_scgi
-      template: src={{ base_cfg_dir }}/custom-apache24-proxy-scgi/{{ project_name }}-vhost.conf dest=/usr/local/conf/conf.d/
+      template: src=edurepo-vhost.conf.j2 dest=/usr/local/conf/conf.d/edurepo-vhost.conf
       sudo: yes
-      when: use_system_httpd == "no" and use_mod_wsgi == "no"
+      when: use_system_httpd == "no"
 
     - name: Restart custom httpd
       command: '{{ apachectl }} graceful'
@@ -280,4 +270,3 @@
     - name: restart application
       service: name={{ project_name }}-app state=restarted
       sudo: yes
-      when: use_mod_wsgi == "no"
