Stop tracking .idea stuff

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 db.sqlite3
 README.html
 envs/edurepo/
-src/edurepo/.idea/workspace.xml
+src/edurepo/.idea/
 src/webapp/css/bootstrap*.css
 src/webapp/lib/angular
 src/webapp/lib/jquery
