--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -22,3 +22,9 @@ python-social-auth==0.2.19
 pytz==2016.6.1
 requests==2.10.0
 uWSGI==2.0.11.2
+celery==3.1.23
+  # pytz
+  billiard==3.3.0.23
+  kombu==3.0.35
+    amqp==1.4.9
+    anyjson==0.3.3
