--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,30 +1,31 @@
-beautifulsoup4==4.5.0
-certifi==14.5.14
-coverage==4.1
-Django==1.8.14
-django-bootstrap3==5.0.3
-django-nose==1.4.4
-  nose==1.3.7
-django-tastypie==0.13.3
-  python-dateutil==2.5.3
-    six==1.10.0
-  python-mimeparse==0.1.4
-psycopg2==2.6.2
-python-social-auth==0.2.19
-  # requests
-  oauthlib==1.1.2
-  # six
-  PyJWT==1.4.1
-  python-openid==2.2.5
-  requests-oauthlib==0.6.2
-    # requests
-    # oauthlib
-pytz==2016.6.1
-requests==2.10.0
-uWSGI==2.0.13.1
+beautifulsoup4==4.6.0
 celery==3.1.23
-  # pytz
   billiard==3.3.0.23
   kombu==3.0.35
     amqp==1.4.9
     anyjson==0.3.3
+  pytz==2017.2
+coverage==4.4.1
+Django==1.9.13
+django-bootstrap3==7.1.0
+django-nose==1.4.5
+  nose==1.3.7
+django-tastypie==0.14.0
+  python-dateutil==2.6.1
+    six==1.10.0
+  python-mimeparse==0.1.4
+psycopg2==2.7.3.1
+python-social-auth==0.2.19
+  oauthlib==1.1.2
+  PyJWT==1.4.1
+  python-openid==2.2.5
+  requests==2.18.4
+    certifi==14.5.14
+    chardet==3.0.4
+    idna==2.6
+    urllib3==1.22
+    # six
+  requests-oauthlib==0.8.0
+    # oauthlib
+    # requests
+uWSGI==2.0.15
