--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -8,6 +8,8 @@ celery==3.1.23
 coverage==4.4.1
 Django==1.9.13
 django-bootstrap3==7.1.0
+django-click==2.0.0
+  click==6.7
 django-nose==1.4.5
   nose==1.3.7
 django-tastypie==0.14.0
